# cli-tool-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  deny.toml  test.rest
assets/: b64.txt
src/: csv.rs  input.rs  lib.rs  main.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
src/process/: base64.rs  csv.rs  generate_password.rs  http_serve.rs  mod.rs  text.rs
