[package]
name = "handle-csv"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"]}
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
enum_dispatch = "0.3.13"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
zxcvbn = "3.1.0"
blake3 = "1.5.5"
tower-http = { version = "0.6.2", features = ["compression-full", "cors", "trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = { version = "0.7.4", features = ["http2", "query", "tracing"] }
